--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -89,7 +89,7 @@
   .rightSide {
     width: 50%;
     height: 100%;
-    background-image: url("/back.jpg");
+    background-image: url("/geo.jpg");
     background-size: cover;
     border-radius: 10px;
     border-bottom-left-radius: 90px;
