--- a/components/addAnaForm/addAnaForm.module.scss
+++ b/components/addAnaForm/addAnaForm.module.scss
@@ -1,26 +1,27 @@
 .formContainer {
-  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
-  background-color: rgba($color: #000000, $alpha: 0.3);
-  padding: 50px;
-  border-radius: 10px;
-
+  .p {
+    font-size: 25px;
+    margin-bottom: 20px;
+    font-family: "Rubik", sans-serif;
+    width: 450px;
+    text-align: center;
+    margin-top: 20px;
+  }
   .form {
     background-image: url("/geo.jpg");
     background-size: cover;
     width: 25%;
     padding: 5px;
     border-radius: 10px;
-    // display: flex;
-    // flex-direction: column;
-    // align-items: center;
-    // justify-content: center;
-
-    position: absolute;
-    top: 45%;
-    left: 45%;
-    transform: translate(-50%, -50%);
+    box-shadow: -2px -2px 5px 0px rgba(0, 0, 0, 0.64);
+    -webkit-box-shadow: -2px -2px 5px 0px rgba(0, 0, 0, 0.64);
+    -moz-box-shadow: -2px -2px 5px 0px rgba(0, 0, 0, 0.64);
     form {
       background-color: white;
       padding: 10px 15px;
@@ -63,11 +64,6 @@
         font-weight: 900;
         font-size: 20px;
         color: white;
-        cursor: pointer;
-      }
-      .close {
-        align-self: flex-end;
-        font-size: 23px;
         cursor: pointer;
       }
     }
